--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,12 +103,23 @@ deploy_branch:
     URL: $CI_COMMIT_BRANCH.$URL
     PREFIX: $CI_COMMIT_BRANCH
 
-.deploy_live:
+deploy_live:
   stage: deploy_live
   tags:
     - docker2
   rules:
-    - if: '$CI_COMMIT_BRANCH == "main"'
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: on_success
+      needs:
+        - cypress_full_test_preview_stage
+        - cypress_custom_tests_preview_stage
+        - playwright_screen_compare_live_against_preview
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: manual
+      allow_failure: true
+      needs: []
+      manual_confirmation: 'Are you sure you want to deploy to the production system?'
+  # Better use explicit Versions of an Image, see https://vsupalov.com/docker-latest-tag/
   image: docker:latest
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY
@@ -124,20 +135,6 @@ deploy_branch:
     IMAGE: $CI_IMAGE
     SHORTCODE1: $SHORTCODE
     DATABASE_URL: mysql://$DB_USER:$DB_PWD@$DB_HOST:3306/$DB_NAME
-
-deploy_live:
-  extends: .deploy_live
-  when: on_success
-  needs:
-    - cypress_full_test_preview_stage
-    - cypress_custom_tests_preview_stage
-    - playwright_screen_compare_live_against_preview
-
-deploy_live_manual:
-  extends: .deploy_live
-  when: manual
-  allow_failure: true
-  needs: []
 
 cypress_internal_links_test_live:
   stage: trigger_live_tests
